feat: canonicalize based on ClassModel